# near2aurora-cross-contract-calls

./: README.md
near-proxy/: .gitignore  Cargo.toml  build.sh
near-proxy/src/: aurora.rs  lib.rs  utils.rs
status-message/: hardhat.config.js  package.json
status-message/contracts/: StatusMessage.sol
